# hermes-trading

./: .env  .gitignore  Dockerfile  main.py  pyproject.toml
hermes_trading/: app.py  backtest.py  state.py  strategy.py  worker.py
hermes_trading/adapters/: live.py  paper.py
hermes_trading/templates/: dashboard.html
state/: goal.yaml
