[project]
name = "hermes-trading"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt",
    "yfinance",
    "pyyaml",
    "httpx",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes_trading"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
